Signed-off-by: ahmad <ahamdalbow24@gmail.com>

--- a/src/components/Crafts.css
+++ b/src/components/Crafts.css
@@ -1,13 +1,17 @@
 .crafts-container {
   height: 200vh;
-  background-color: #fefefe;
+  background-color: #000000;
+  opacity: 0;
 }
 .landing-container,
 .crafts-container {
   background-color: #fefefe;
   padding-top: 1rem;
 }
-
+.crafts-container {
+  background-color: #000000;
+  opacity: 0;
+}
 .crafts-header {
   position: relative;
   color: white;
